Add jq to dev docker images (#770)

--- a/concourse/docker/pxf-dev-base/gpdb5/centos7/Dockerfile
+++ b/concourse/docker/pxf-dev-base/gpdb5/centos7/Dockerfile
@@ -7,8 +7,8 @@ ARG GINKGO_VERSION
 # install Go utilities
 RUN GOPATH=/opt/go /usr/local/go/bin/go install github.com/onsi/ginkgo/ginkgo@v${GINKGO_VERSION}
 
-# add Java 8, Java 11 and rpm-build
-RUN yum install -y rpm-build java-1.8.0-openjdk-devel && yum clean all \
+# add Java 8, Java 11, jq and rpm-build
+RUN yum install -y rpm-build java-1.8.0-openjdk-devel jq && yum clean all \
     && wget -q https://download.java.net/openjdk/jdk11/ri/openjdk-11+28_linux-x64_bin.tar.gz \
     && mkdir -p /usr/lib/jvm \
     && tar -C /usr/lib/jvm -xzf openjdk-11+28_linux-x64_bin.tar.gz \
