--- a/concourse/docker/pxf-dev-base/gpdb6/centos7/Dockerfile
+++ b/concourse/docker/pxf-dev-base/gpdb6/centos7/Dockerfile
@@ -36,7 +36,7 @@ RUN curl -fsSL -o /tmp/apache-maven.tar.gz ${BASE_URL}/apache-maven-${MAVEN_VERS
     && tar -xzf /tmp/apache-maven.tar.gz -C /usr/share/maven --strip-components=1 \
     && rm -f /tmp/apache-maven.tar.gz \
     && ln -s /usr/share/maven/bin/mvn /usr/bin/mvn \
-    && yum install -y rpm-build python-devel sudo && yum clean all \
+    && yum install -y rpm-build python-devel jq sudo && yum clean all \
     && cd /tmp && /usr/bin/pip install --upgrade pip==20.3.3 \
     && /usr/bin/pip install psi paramiko --no-cache-dir
 
