Add scripts for modifying PXF extension to support gpupgrade (#754)
Includes a basic automation test for the scripts. The test makes sure
that PXF can still work after running `pxf-pre-gpupgrade` and after
running `pxf-post-gpupgrade`.

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -263,6 +263,8 @@ task stage(type: Copy) {
         include 'pxf'
         include 'kill-pxf.sh'
         include 'merge-pxf-config.sh'
+        include 'pxf-pre-gpupgrade'
+        include 'pxf-post-gpupgrade'
         into 'bin'
         filter { line -> line.replaceAll('_PXF_VERSION_', "${version}") }
     }
