--- a/.github/workflows/create-release-on-tag.yml
+++ b/.github/workflows/create-release-on-tag.yml
@@ -22,13 +22,19 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: PXF Version ${{ github.ref }}
           body: |
-            ## 6.2.3 (01/31/2022)
+            ## 6.3.0 (03/16/2022)
+
+            ### Enhancements:
+
+            - [#703](https://github.com/greenplum-db/pxf/pull/703) Added Support for Avro Logical Types for Readable External Tables
+            - [#707](https://github.com/greenplum-db/pxf/pull/707) Enabled Kerberos Constrained Delegation impersonation for secure clusters
+            - [#752](https://github.com/greenplum-db/pxf/pull/752) Add support for GPDB6 on RHEL 8
+            - [#754](https://github.com/greenplum-db/pxf/pull/754) Add scripts for modifying PXF extension to support gpupgrade
 
             ### Bug Fixes:
 
-            - [#720](https://github.com/greenplum-db/pxf/pull/720) Redirect PXF stdout and stderr to files in PXF_LOGDIR
-            - [#735](https://github.com/greenplum-db/pxf/pull/735) Bumped Log4j2 version to 2.17.1
-            - [#740](https://github.com/greenplum-db/pxf/pull/740) Bump go version to 1.17.6
-            - [#741](https://github.com/greenplum-db/pxf/pull/741) Improved performance of iterating over a list of fragments
+            - [#738](https://github.com/greenplum-db/pxf/pull/738) Fix: For reading the records correctly from a MultiLine JSON file
+            - [#756](https://github.com/greenplum-db/pxf/pull/756) Fixed HiveDataFragmenter not closing connections to Hive Metastore
+            - [#760](https://github.com/greenplum-db/pxf/pull/760) Update bundled postgresql to 42.3.3
           draft: false
           prerelease: false
