ci: include PXF major version in cloud storage path (#801)
The build pipelines for PXF 5.16 and 6 use the same path for storing
snapshot tarballs. The pipelines can distinguish artifacts produced by
the different pipelines by correlating the files generation with the CI
job that produced the artifact. CI jobs outside of the build pipelines
cannot distinguish between snapshot builds of PXF 5.16 and 6 and will
randomly get one or the other depending on which ran last.

This commit moves PXF snapshot tarballs to be stored in a location that
includes the PXF major version. This will allow downstream consumers of
snapshot builds to select which PXF major version to pull.

Authored-by: Bradford D. Boyle <bradfordb@vmware.com>

--- a/concourse/pipelines/templates/build_pipeline-tpl.yml
+++ b/concourse/pipelines/templates/build_pipeline-tpl.yml
@@ -534,7 +534,7 @@ resources:
   source:
     bucket: data-gpdb-ud-pxf-build
     json_key: ((pxf-storage-service-account-key))
-    versioned_file: ((pxf-build-bucket-prefix))/snapshots/pxf-gp[[gp_ver]].el7.tar.gz
+    versioned_file: ((pxf-build-bucket-prefix))/snapshots/pxf6/pxf-gp[[gp_ver]].el7.tar.gz
 {% endfor %}
 
 {% set gp_ver = 6 %}
@@ -544,7 +544,7 @@ resources:
   source:
     bucket: data-gpdb-ud-pxf-build
     json_key: ((pxf-storage-service-account-key))
-    versioned_file: ((pxf-build-bucket-prefix))/snapshots/pxf-gp[[gp_ver]]-ubuntu18.04.tar.gz
+    versioned_file: ((pxf-build-bucket-prefix))/snapshots/pxf6/pxf-gp[[gp_ver]]-ubuntu18.04.tar.gz
 
 - name: pxf_gp[[gp_ver]]_tarball_rhel8
   type: gcs
@@ -552,7 +552,7 @@ resources:
   source:
     bucket: data-gpdb-ud-pxf-build
     json_key: ((pxf-storage-service-account-key))
-    versioned_file: ((pxf-build-bucket-prefix))/snapshots/pxf-gp[[gp_ver]].el8.tar.gz
+    versioned_file: ((pxf-build-bucket-prefix))/snapshots/pxf6/pxf-gp[[gp_ver]].el8.tar.gz
 {% set gp_ver = None %}
 
 ## ---------- Auxiliary Resources ----------
