--- a/fdw/Makefile
+++ b/fdw/Makefile
@@ -1,4 +1,13 @@
 # fdw/Makefile
+ifndef GPHOME
+$(error GPHOME is not defined)
+endif
+ifndef PXF_HOME
+$(error PXF_HOME is not defined)
+endif
+
+PXF_BASE ?= $(PXF_HOME)
+REGRESS_OPTS = --init-file=./init_file
 
 MODULE_big = pxf_fdw
 OBJS = pxf_fdw.o pxf_bridge.o pxf_deparse.o pxf_filter.o pxf_header.o pxf_option.o libchurl.o
@@ -8,7 +17,7 @@ SHLIB_LINK += -lcurl
 EXTENSION = pxf_fdw
 DATA = pxf_fdw--1.0.sql
 
-REGRESS = pxf_fdw_wrapper pxf_fdw_server pxf_fdw_user_mapping pxf_fdw_foreign_table
+REGRESS = pxf_fdw_wrapper pxf_fdw_server pxf_fdw_user_mapping pxf_fdw_foreign_table pxf_fdw_filter_push_down pxf_fdw_hive_smoke pxf_fdw_hbase_smoke pxf_fdw_hdfs_smoke pxf_fdw_writable_smok pxf_fdw_multi_block_data_smoke
 
 PG_CONFIG = pg_config
 PGXS := $(shell $(PG_CONFIG) --pgxs)
