make installcheck passed

--- a/fdw/Makefile
+++ b/fdw/Makefile
@@ -17,7 +17,7 @@ SHLIB_LINK += -lcurl
 EXTENSION = pxf_fdw
 DATA = pxf_fdw--1.0.sql
 
-REGRESS = pxf_fdw_wrapper pxf_fdw_server pxf_fdw_user_mapping pxf_fdw_foreign_table pxf_fdw_filter_push_down pxf_fdw_hive_smoke pxf_fdw_hbase_smoke pxf_fdw_hdfs_smoke pxf_fdw_writable_smok pxf_fdw_multi_block_data_smoke
+REGRESS = pxf_fdw_wrapper pxf_fdw_server pxf_fdw_user_mapping pxf_fdw_foreign_table pxf_fdw_filter_push_down pxf_fdw_hdfs_smoke 
 
 PG_CONFIG = pg_config
 PGXS := $(shell $(PG_CONFIG) --pgxs)
